apps/base/coder/tailscale-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder-outpost
  namespace: app-coder
  labels:
    tailscale.com/proxy-class: "privileged-proxy"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: coder
    app.kubernetes.io/instance: coder
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 8080
