apps/base/coder/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: coder
  namespace: app-coder

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`coder.cluster.arpa`)
      kind: Rule
      services:
        - name: coder
          namespace: app-coder
          port: 80
  tls:
    secretName: traefik-tls
